--- a/app/src/main/res/layout/activity_servidor.xml
+++ b/app/src/main/res/layout/activity_servidor.xml
@@ -4,18 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ExternoActivity">
-
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:text="Button"
-        tools:layout_editor_absoluteX="116dp"
-        tools:layout_editor_absoluteY="168dp" />
+    tools:context=".ServidorActivity">
 
     <EditText
-        android:id="@+id/edt_externo_nome"
+        android:id="@+id/edt_servidor_nome"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
@@ -25,20 +17,20 @@
         tools:layout_editor_absoluteY="48dp" />
 
     <EditText
-        android:id="@+id/edt_externo_email"
+        android:id="@+id/edt_servidor_siape"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:hint="E-mail"
+        android:hint="SIAPE"
         android:inputType="textPersonName"
         tools:layout_editor_absoluteX="84dp"
-        tools:layout_editor_absoluteY="121dp" />
+        tools:layout_editor_absoluteY="123dp" />
 
     <Button
-        android:id="@+id/btn_externo_ok"
+        android:id="@+id/btn_servidor_ok"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="OK"
         tools:layout_editor_absoluteX="148dp"
-        tools:layout_editor_absoluteY="231dp" />
+        tools:layout_editor_absoluteY="245dp" />
 </android.support.constraint.ConstraintLayout>
